# my-openenv

./: .gitignore  Dockerfile  README.md  README_HF_HEADER.md  baseline_scores.json  demo.py  environment.py  fix_prompt.txt  generator.py  graders.py  incident_grader.py  incident_task.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  validate.py  variants.py
server/: app.py
sql_debug_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
